production changes in ports